
2020-10-29 Franz Holzinger  <franz@ttproducts.de>
    * workaround for bug in TYPO3 9.5.22: ExtensionManagementUtility::isLoaded for saltedpasswords must not be true.

2020-06-20 Franz Holzinger  <franz@ttproducts.de>
    * new feature: the locallange setup shall be merged to the already present items of the TCA for radio or select. E.g. you can override the gender and the status by a locallang setup. You the constants mergeLabels to activate this feature.
    * bugfix: add missing button to enter in the login box after the click on the registration confirmation link.
    * bugfix: missing agency setup. The method addStaticFile must be called also for the frontend.

2020-05-30 Franz Holzinger  <franz@ttproducts.de>
    * replace the documentation in the outdated sxw format manual.sxw by the manual.odt in the Open Document Format.
    * bugfix: the template must use field specific label classes and not labelStatus outside of the status field

2020-05-09 Franz Holzinger  <franz@ttproducts.de>
    * support for TYPO3 9.x
    * several PHP bug fixes

2020-02-18 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: Error in the check if a field has already been added to the $TCA by another extension

2019-07-27 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: Non-static method JambageCom\Agency\Api\System::login

2019-04-12 Franz Holzinger  <franz@ttproducts.de>
    * new feature: support for recursive page ids to have the front end users in underlying sysfolders.

2019-02-11 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: add missing parameter errorCode to the render methods of DeleteView and EditView.
    * bugfix: use flexform_ds_pi.xml and not flexform_ds_pi.xlf

2019-02-09 Franz Holzinger  <franz@ttproducts.de>
    * bugfix for PHP 7.2: replace the preview mode constants MODE_PREVIEW and MODE_NORMAL with namespace constants \JambageCom\Agency\Constants\Mode PREVIEW and NORMAL