@@ -152,14 +152,26 @@ class ConfigurationCheck {
                 $content .= sprintf(LocalizationUtility::translate('internal_check_requirements_frontend'), $message);
             } else {
                     // Check if salted passwords are enabled in front end
-                if (class_exists(\TYPO3\CMS\Saltedpasswords\Utility\SaltedPasswordsUtility::class)) {
-                    if (!\TYPO3\CMS\Saltedpasswords\Utility\SaltedPasswordsUtility::isUsageEnabled('FE')) {
+                if (                
+                    class_exists(\TYPO3\CMS\Core\Crypto\PasswordHashing\SaltedPasswordsUtility::class) ||
+                    class_exists(\TYPO3\CMS\Saltedpasswords\Utility\SaltedPasswordsUtility::class)
+                ) {
+                    if (
+                        class_exists(\TYPO3\CMS\Saltedpasswords\Utility\SaltedPasswordsUtility::class) &&
+                        !\TYPO3\CMS\Saltedpasswords\Utility\SaltedPasswordsUtility::isUsageEnabled('FE')
+                    ) {
                         $message = LocalizationUtility::translate('internal_salted_passwords_disabled');
                         GeneralUtility::sysLog($message, $extensionKey, GeneralUtility::SYSLOG_SEVERITY_ERROR);
                         $content .= sprintf(LocalizationUtility::translate('internal_check_requirements_frontend'), $message);
                     } else {
-                            // Check if we can get a salting instance
-                        $objSalt = \TYPO3\CMS\Saltedpasswords\Salt\SaltFactory::getSaltingInstance(NULL);
+                        $objSalt = null;
+                        if (version_compare(TYPO3_version, '9.5.0', '>=')) {
+                                // Check if we can get a salting instance
+                            $objSalt = \TYPO3\CMS\Core\Crypto\PasswordHashing\PasswordHashFactory::getSaltingInstance(null);
+                        } else {
+                            $objSalt = \TYPO3\CMS\Saltedpasswords\Salt\SaltFactory::getSaltingInstance(null);
+                        }
+
                         if (!is_object($objSalt)) {
                                 // Could not get a salting instance from saltedpasswords
                             $message = LocalizationUtility::translate('internal_salted_passwords_no_instance');
