@@ -1,3 +1,5 @@
+2020-11-20 Franz Holzinger  <franz@ttproducts.de>
+    * bugfix for TYPO3 9.5: Use the classes \TYPO3\CMS\Core\Crypto\PasswordHashing\SaltedPasswordService instead of \TYPO3\CMS\Saltedpasswords\SaltedPasswordService and  \TYPO3\CMS\Core\Crypto\PasswordHashing\PasswordHashFactor instead of \TYPO3\CMS\Saltedpasswords\Salt\SaltFactory
 
 2020-10-29 Franz Holzinger  <franz@ttproducts.de>
     * workaround for bug in TYPO3 9.5.22: ExtensionManagementUtility::isLoaded for saltedpasswords must not be true.
